--- a/logstash/kafka.conf
+++ b/logstash/kafka.conf
@@ -1,2 +1,13 @@
-input { kafka { topic_id="test", zk_connect => "192.68.33.11:2181" }}
-output { stdout { codec => rubydebug } }
+input
+ { kafka 
+	{ 
+		topic_id="test", 
+		zk_connect => "192.168.33.11:2181" 
+	}
+  }
+output 
+{ stdout 
+	{ 
+		codec => rubydebug 
+		} 
+	}
