--- a/logstash/kafka.conf
+++ b/logstash/kafka.conf
@@ -1,13 +1,14 @@
 input
- { kafka 
+{
+	kafka 
 	{ 
-		topic_id="test", 
-		zk_connect => "192.168.33.11:2181" 
+		codec => plain topic_id => "test" zk_connect => "192.168.33.11:2181" 
+	} 
+}
+output
+{ 
+	stdout
+	{
+		codec => rubydebug
 	}
-  }
-output 
-{ stdout 
-	{ 
-		codec => rubydebug 
-		} 
-	}
+}
