--- a/logstash/kafka.conf
+++ b/logstash/kafka.conf
@@ -1,14 +1,27 @@
 input
 {
-	kafka 
-	{ 
-		codec => plain topic_id => "test" zk_connect => "192.168.33.11:2181" 
-	} 
+        kafka
+        {
+                codec => plain topic_id => "outputs" zk_connect => "192.168.33.11:2181"
+        }
 }
 output
-{ 
-	stdout
-	{
-		codec => rubydebug
-	}
+{
+        stdout
+        {
+                codec => rubydebug
+        }
+        elasticsearch
+        {
+                action => "index"
+                host => "localhost"
+                index => "output_test"
+        }
+}
+filter
+{
+        csv {
+                columns => ["output_id", "hsh", "amount", "output", "position", "spent", "type"]
+                separator => ","
+        }
 }
